// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/cascader/demo/basic.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/change-on-select.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/custom-render.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    style="width:270px;"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    >
      <span>
        Zhejiang / 
      </span>
      <span>
        Hangzhou / 
      </span>
      <span>
        West Lake (
        <a>
          752100
        </a>
        )
      </span>
    </span>
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-cross-circle ant-cascader-picker-clear"
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/custom-trigger.md correctly 1`] = `
<span>
  Unselect 
  <div
    id="TriggerContainer"
  >
    <a
      href="#"
      tabindex="0"
    >
      Change city
    </a>
  </div>
</span>
`;

exports[`renders ./components/cascader/demo/default-value.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    >
      Zhejiang / Hangzhou / West Lake
    </span>
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-cross-circle ant-cascader-picker-clear"
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/disabled-option.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/hover.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/lazy.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/search.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    />
  </span>
</div>
`;

exports[`renders ./components/cascader/demo/size.md correctly 1`] = `
<div>
  <div
    id="TriggerContainer"
  >
    <span
      class="ant-cascader-picker"
      tabindex="0"
    >
      <span
        class="ant-cascader-picker-label"
      />
      <input
        autocomplete="off"
        class="ant-input ant-cascader-input ant-input-lg"
        placeholder="Please select"
        readonly=""
        type="text"
        value=""
      />
      <i
        class="anticon anticon-down ant-cascader-picker-arrow"
      />
    </span>
  </div>
  <br />
  <br />
  <div
    id="TriggerContainer"
  >
    <span
      class="ant-cascader-picker"
      tabindex="0"
    >
      <span
        class="ant-cascader-picker-label"
      />
      <input
        autocomplete="off"
        class="ant-input ant-cascader-input "
        placeholder="Please select"
        readonly=""
        type="text"
        value=""
      />
      <i
        class="anticon anticon-down ant-cascader-picker-arrow"
      />
    </span>
  </div>
  <br />
  <br />
  <div
    id="TriggerContainer"
  >
    <span
      class="ant-cascader-picker"
      tabindex="0"
    >
      <span
        class="ant-cascader-picker-label"
      />
      <input
        autocomplete="off"
        class="ant-input ant-cascader-input ant-input-sm"
        placeholder="Please select"
        readonly=""
        type="text"
        value=""
      />
      <i
        class="anticon anticon-down ant-cascader-picker-arrow"
      />
    </span>
  </div>
  <br />
  <br />
</div>
`;
